--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.0
+  cloud_firestore: ^4.5.0
   table_calendar: ^3.0.6
+
 
 
 dev_dependencies:
