--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   firebase_auth: ^4.4.0
   cloud_firestore: ^4.5.0
   table_calendar: ^3.0.6
-  image_picker: ^0.8.7
+  image_picker: ^0.8.7+5
   firebase_storage: ^11.1.0
 
 
