--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,12 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.0
   cloud_firestore: ^4.5.0
-  table_calendar: ^3.0.6
+  table_calendar: ^3.0.2
   image_picker: ^0.8.7+5
   firebase_storage: ^11.1.0
   dio: ^5.2.0+1
+  flutter_cache_manager: ^3.3.1
+
 
 
 
